Left justify all form elements in goal detail page columns - remove centering and ensure left alignment

--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,7 @@ header p {
 .form-group {
     margin-bottom: 18px;
     text-align: left;
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 100%;
 }
 
 .form-group label {
@@ -434,6 +432,8 @@ header p {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    align-items: flex-start;
+    text-align: left;
 }
 
 .radio-group {
